<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginSignupScreen">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="246dp"
        android:layout_height="234dp"
        android:layout_marginTop="88dp"
        android:contentDescription="@string/surakshamitra_app_logo"
        android:src="@drawable/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/hindsemibold"
        android:text="@string/marathi_appname"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/hindsemibold"
        android:text="@string/apptagline"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:layout_width="281dp"
        android:layout_height="60dp"
        android:layout_marginBottom="112dp"
        android:text="@string/create_login"
        android:background="@color/skyblue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>