<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen"
    android:background="@drawable/gradient_background">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="246dp"
        android:layout_height="234dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/surakshamitra_app_logo"
        android:src="@drawable/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/hindsemibold"
        android:text="@string/marathi_appname"
        android:textSize="40sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

<!--    <androidx.fragment.app.FragmentContainerView-->
<!--        android:id="@+id/fragmentContainerView"-->
<!--        android:layout_width="340sp"-->
<!--        android:layout_height="380sp"-->
<!--        android:background="@drawable/textround"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="1.0" />-->

<!--    <TextView-->
<!--        android:layout_width="300sp"-->
<!--        android:layout_height="40sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/fragmentContainerView"-->
<!--        app:layout_constraintHorizontal_bias="0.475"-->
<!--        app:layout_constraintStart_toStartOf="@+id/fragmentContainerView"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView"-->
<!--        app:layout_constraintVertical_bias="0.403" />-->
<!--    <TextView-->
<!--        android:layout_width="300sp"-->
<!--        android:layout_height="40sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/fragmentContainerView"-->
<!--        app:layout_constraintHorizontal_bias="0.475"-->
<!--        app:layout_constraintStart_toStartOf="@+id/fragmentContainerView"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView"-->
<!--        app:layout_constraintVertical_bias="0.403" />-->
<!--    />-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginanim"
        android:layout_width="match_parent"
        android:layout_height="370sp"
        android:background="@drawable/fragback"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome Back !!"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.109"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.046" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/hepta"
            android:text="Login"
            android:textColor="@color/black"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.13"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.119" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="300sp"
            android:layout_height="50sp"
            android:background="@drawable/textround"
            android:paddingLeft="15sp"
            android:text="@string/Username"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.54"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.303" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="300sp"
            android:layout_height="50sp"
            android:background="@drawable/textround"
            android:paddingLeft="15sp"
            android:text="PassWord"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.54"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            app:layout_constraintVertical_bias="0.075" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="25sp"
            android:layout_height="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.111"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.652" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="12dp"
            android:text="Remember Me"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/checkBox"
            app:layout_constraintTop_toBottomOf="@+id/editText2"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="Forget Password ?"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.756"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/button"
            android:layout_width="300sp"
            android:layout_height="50sp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/hepta"
            android:text="Login"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText2"
            app:layout_constraintVertical_bias="0.48" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="Don't have an account?"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            app:layout_constraintVertical_bias="0.058" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    </androidx.fragment.app.FragmentContainerView>-->


</androidx.constraintlayout.widget.ConstraintLayout>